# livestream-commerce-vn

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  smoke.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ab_tests.py  products.py  scripts.py  streams.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260514_0001_initial.py
backend/app/models/: __init__.py  ab_test.py  product.py  script.py  stream.py
backend/app/schemas/: ab_test.py  common.py  product.py  script.py  stream.py
backend/app/scripts/: seed.py
backend/app/services/: ab_test_service.py  dialect_prompts.py  script_service.py  stream_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_ab_test_service.py  test_dialect_prompts.py  test_script_service_parser.py  test_stream_event_aggregation.py
docs/: SHIP_CHECKLIST.md  api.md  architecture.md  deployment.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: .gitkeep
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/ab-tests/: page.tsx
frontend/src/app/ab-tests/[id]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/scripts/: page.tsx
frontend/src/app/streams/: page.tsx
frontend/src/app/streams/[id]/: page.tsx
frontend/src/components/charts/: MinuteChart.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
infra/k8s/: backend.yaml  frontend.yaml  ingress.yaml  namespace.yaml
