[project]
name = "livestream-commerce-vn-backend"
version = "0.1.0"
description = "Analytics & AI co-pilot backend for TikTok Shop livestream sellers in Vietnam"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "pydantic-settings==2.7.0",
  "sqlalchemy[asyncio]==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.14.0",
  "redis==5.2.1",
  "arq==0.26.3",
  "httpx==0.28.1",
  # LLM access is over OpenAI-compatible HTTP (httpx above). No proprietary
  # SDKs — default deployment is Ollama+Qwen2.5; production uses vLLM/SGLang.
  "boto3==1.35.84",
  "python-multipart==0.0.20",
  "orjson==3.10.12",
  "structlog==24.4.0",
  "prometheus-client==0.21.1",
  "scipy==1.14.1",
  "numpy==2.2.0",
  "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "pytest-cov==6.0.0",
  "httpx==0.28.1",
  "ruff==0.8.4",
  "mypy==1.13.0",
  "types-redis==4.6.0.20241004",
  "faker==33.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "ASYNC", "S", "C4"]
# RUF001/002/003: ambiguous unicode characters — intentional in Vietnamese copy.
ignore = ["S101", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ASYNC"]
"app/db/migrations/**/*.py" = ["E501", "UP", "I001"]
"app/scripts/seed.py" = ["E501", "S311"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
